--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
   </properties>
 
   <dependencies>
-    <!--aop-->
+    <!--aspect-->
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjweaver</artifactId>
