--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
     <!--<version>${javaee.version}</version>-->
     <!--<scope>provided</scope>-->
     <!--</dependency>-->
+    <!-- =============================================== mysql jdbc config ============================================ -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.15</version>
+    </dependency>
     <!-- =============================================== servlet config ============================================ -->
     <!--<dependency>-->
     <!--<groupId>javax.servlet</groupId>-->
