--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-    <aspectjweaver.version>1.9.2</aspectjweaver.version>
+
+    <spring.version>5.1.5.RELEASE</spring.version>
 
     <!--javaee版本-->
-    <!--<javaee.version>8.0</javaee.version>-->
+    <!--<javaee.version></javaee.version>-->
     <!-- spring版本号 -->
-    <spring.version>5.1.5.RELEASE</spring.version>
+
     <!--log4j版本号-->
     <!--<log4j.version>2.10.0</log4j.version>-->
     <!--&lt;!&ndash;mybatis&ndash;&gt;-->
@@ -30,11 +31,10 @@
     <!--<mybatis-spring.version>1.3.1</mybatis-spring.version>-->
     <!--apache-->
     <!--<apahe-poi.version>3.17</apahe-poi.version>-->
-    <!--<commons-dbcp2.version>2.2.0</commons-dbcp2.version>-->
+    <!--<commons-dbcp2.version></commons-dbcp2.version>-->
     <!--<commons-fileupload.version>1.3.3</commons-fileupload.version>-->
     <!--<commons-io.version>2.6</commons-io.version>-->
     <!--<commons-lang3.version>3.7</commons-lang3.version>-->
-    <!--<commons-pool2.version>2.5.0</commons-pool2.version>-->
     <!--json解析器-->
     <!--<jackson.version>2.9.4</jackson.version>-->
     <!--junit5-->
@@ -47,25 +47,30 @@
   </properties>
 
   <dependencies>
-    <!--aspect-->
+    <!-- =============================================== aspectj config ============================================ -->
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjweaver</artifactId>
-      <version>${aspectjweaver.version}</version>
+      <version>1.9.2</version>
     </dependency>
-
-
+    <!-- =============================================== javax config ============================================ -->
     <!--<dependency>-->
     <!--<groupId>javax</groupId>-->
     <!--<artifactId>javaee-api</artifactId>-->
-    <!--<version>${javaee.version}</version>-->
+    <!--<version>8.0</version>-->
     <!--<scope>provided</scope>-->
     <!--</dependency>-->
-    <!-- =============================================== mysql jdbc config ============================================ -->
+    <!-- =============================================== mysql config ============================================ -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.15</version>
+    </dependency>
+    <!-- =============================================== c3p0 config ============================================ -->
+    <dependency>
+      <groupId>com.mchange</groupId>
+      <artifactId>c3p0</artifactId>
+      <version>0.9.5.4</version>
     </dependency>
     <!-- =============================================== servlet config ============================================ -->
     <!--<dependency>-->
@@ -95,7 +100,6 @@
     <!--<artifactId>log4j-slf4j-impl</artifactId>-->
     <!--<version>${log4j.version}</version>-->
     <!--</dependency>-->
-
     <!-- ============================================== jackson config ============================================= -->
     <!--<dependency>-->
     <!--<groupId>com.fasterxml.jackson.core</groupId>-->
@@ -205,11 +209,16 @@
     <!--<version>${ojdbc.version}</version>-->
     <!--</dependency>-->
     <!-- ================================================= apache ================================================== -->
-    <!--<dependency>-->
-    <!--<groupId>org.apache.commons</groupId>-->
-    <!--<artifactId>commons-dbcp2</artifactId>-->
-    <!--<version>${commons-dbcp2.version}</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-pool2</artifactId>
+      <version>2.5.0</version>
+    </dependency>
     <!--<dependency>-->
     <!--<groupId>org.apache.commons</groupId>-->
     <!--<artifactId>commons-fileupload</artifactId>-->
@@ -224,11 +233,6 @@
     <!--<groupId>org.apache.commons</groupId>-->
     <!--<artifactId>commons-lang3</artifactId>-->
     <!--<version>${commons-lang3.version}</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-    <!--<groupId>org.apache.commons</groupId>-->
-    <!--<artifactId>commons-pool2</artifactId>-->
-    <!--<version>${commons-pool2.version}</version>-->
     <!--</dependency>-->
     <!--<dependency>-->
     <!--<groupId>org.apache.poi</groupId>-->
