--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,8 @@
     <!-- spring版本号 -->
 
     <!--log4j版本号-->
-    <!--<log4j.version>2.10.0</log4j.version>-->
+    <!--<log4j.version></log4j.version>-->
     <!--&lt;!&ndash;mybatis&ndash;&gt;-->
-    <!--<mybatis.version>3.4.5</mybatis.version>-->
     <!--<mybatis-spring.version>1.3.1</mybatis-spring.version>-->
     <!--apache-->
     <!--<apahe-poi.version>3.17</apahe-poi.version>-->
@@ -90,16 +89,16 @@
     <!--<version>${taglibs-standard.version}</version>-->
     <!--</dependency>-->
     <!-- ================================================ log4j2 config ============================================ -->
-    <!--<dependency>-->
-    <!--<groupId>org.apache.logging.log4j</groupId>-->
-    <!--<artifactId>log4j-core</artifactId>-->
-    <!--<version>${log4j.version}</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-    <!--<groupId>org.apache.logging.log4j</groupId>-->
-    <!--<artifactId>log4j-slf4j-impl</artifactId>-->
-    <!--<version>${log4j.version}</version>-->
-    <!--</dependency>-->
+    <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.10.0</version>
+    </dependency>
+    <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-slf4j-impl</artifactId>
+    <version>2.10.0</version>
+    </dependency>
     <!-- ============================================== jackson config ============================================= -->
     <!--<dependency>-->
     <!--<groupId>com.fasterxml.jackson.core</groupId>-->
@@ -193,11 +192,11 @@
     <!--</dependency>-->
 
     <!-- ============================================ mybatis config =============================================== -->
-    <!--<dependency>-->
-    <!--<groupId>org.mybatis</groupId>-->
-    <!--<artifactId>mybatis</artifactId>-->
-    <!--<version>${mybatis.version}</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.4.5</version>
+    </dependency>
     <!--<dependency>-->
     <!--<groupId>org.mybatis</groupId>-->
     <!--<artifactId>mybatis-spring</artifactId>-->
