--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,6 @@
 
     <!--log4j版本号-->
     <!--<log4j.version></log4j.version>-->
-    <!--&lt;!&ndash;mybatis&ndash;&gt;-->
-    <!--<mybatis-spring.version>1.3.1</mybatis-spring.version>-->
     <!--apache-->
     <!--<apahe-poi.version>3.17</apahe-poi.version>-->
     <!--<commons-dbcp2.version></commons-dbcp2.version>-->
@@ -154,6 +152,7 @@
     </dependency>
 
     <!-- ============================================= junit5 config =============================================== -->
+    <!--单元测试-->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -197,11 +196,12 @@
       <artifactId>mybatis</artifactId>
       <version>3.4.5</version>
     </dependency>
-    <!--<dependency>-->
-    <!--<groupId>org.mybatis</groupId>-->
-    <!--<artifactId>mybatis-spring</artifactId>-->
-    <!--<version>${mybatis-spring.version}</version>-->
-    <!--</dependency>-->
+    <!--mybatis和spring的整合包-->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.3.1</version>
+    </dependency>
     <!--<dependency>-->
     <!--<groupId>ojdbc</groupId>-->
     <!--<artifactId>ojdbc7</artifactId>-->
@@ -244,6 +244,7 @@
   <build>
     <finalName>ssm</finalName>
     <resources>
+      <!--IDEA允许包中的配置文件复制到编译目录-->
       <resource>
         <directory>src/main/java</directory>
         <includes>
