--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
       <artifactId>c3p0</artifactId>
       <version>0.9.5.4</version>
     </dependency>
+    <!-- =============================================== lombok ============================================ -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.8</version>
+      <scope>provided</scope>
+    </dependency>
     <!-- =============================================== servlet config ============================================ -->
     <!--<dependency>-->
     <!--<groupId>javax.servlet</groupId>-->
