--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,6 @@
     <!--apache-->
     <!--<apahe-poi.version>3.17</apahe-poi.version>-->
     <!--<commons-dbcp2.version></commons-dbcp2.version>-->
-    <!--<commons-fileupload.version>1.3.3</commons-fileupload.version>-->
     <!--<commons-io.version>2.6</commons-io.version>-->
     <!--<commons-lang3.version>3.7</commons-lang3.version>-->
     <!--json解析器-->
@@ -161,7 +160,8 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>RELEASE</version>
+<!--      <version>RELEASE</version>-->
+      <version>5.6.0</version>
       <scope>compile</scope>
     </dependency>
     <!--<dependency>-->
@@ -223,11 +223,11 @@
       <artifactId>commons-pool2</artifactId>
       <version>2.5.0</version>
     </dependency>
-    <!--<dependency>-->
-    <!--<groupId>org.apache.commons</groupId>-->
-    <!--<artifactId>commons-fileupload</artifactId>-->
-    <!--<version>${commons-fileupload.version}</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
     <!--<dependency>-->
     <!--<groupId>org.apache.commons</groupId>-->
     <!--<artifactId>commons-io</artifactId>-->
