--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,6 @@
     <!--<log4j.version></log4j.version>-->
     <!--apache-->
     <!--<apahe-poi.version>3.17</apahe-poi.version>-->
-    <!--<commons-dbcp2.version></commons-dbcp2.version>-->
     <!--<commons-io.version>2.6</commons-io.version>-->
     <!--<commons-lang3.version>3.7</commons-lang3.version>-->
     <!--json解析器-->
@@ -41,30 +40,36 @@
   </properties>
 
   <dependencies>
-    <!-- =============================================== aspectj config ============================================ -->
+    <!-- =============================================== aspectj ============================================ -->
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjweaver</artifactId>
       <version>1.9.2</version>
     </dependency>
-    <!-- =============================================== javax config ============================================ -->
+    <!-- =============================================== javax ============================================ -->
     <!--<dependency>-->
     <!--<groupId>javax</groupId>-->
     <!--<artifactId>javaee-api</artifactId>-->
     <!--<version>8.0</version>-->
     <!--<scope>provided</scope>-->
     <!--</dependency>-->
-    <!-- =============================================== mysql config ============================================ -->
+    <!-- =============================================== mysql ============================================ -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.15</version>
     </dependency>
-    <!-- =============================================== c3p0 config ============================================ -->
+    <!-- =============================================== c3p0 ============================================ -->
     <dependency>
       <groupId>com.mchange</groupId>
       <artifactId>c3p0</artifactId>
       <version>0.9.5.4</version>
+    </dependency>
+    <!-- =============================================== druid ============================================ -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.1.21</version>
     </dependency>
     <!-- =============================================== lombok ============================================ -->
     <dependency>
@@ -73,7 +78,7 @@
       <version>1.18.8</version>
       <scope>provided</scope>
     </dependency>
-    <!-- =============================================== servlet config ============================================ -->
+    <!-- =============================================== servlet ============================================ -->
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
@@ -90,7 +95,7 @@
     <!--<artifactId>taglibs-standard-impl</artifactId>-->
     <!--<version>${taglibs-standard.version}</version>-->
     <!--</dependency>-->
-    <!-- ================================================ log4j2 config ============================================ -->
+    <!-- ================================================ log4j2 ============================================ -->
     <!--<dependency>-->
     <!--<groupId>org.apache.logging.log4j</groupId>-->
     <!--<artifactId>log4j-core</artifactId>-->
@@ -101,7 +106,7 @@
     <!--<artifactId>log4j-slf4j-impl</artifactId>-->
     <!--<version>2.10.0</version>-->
     <!--</dependency>-->
-    <!-- ============================================== jackson config ============================================= -->
+    <!-- ============================================== jackson ============================================= -->
     <!--<dependency>-->
     <!--<groupId>com.fasterxml.jackson.core</groupId>-->
     <!--<artifactId>jackson-databind</artifactId>-->
@@ -118,7 +123,7 @@
     <!--<version>${jackson.version}</version>-->
     <!--</dependency>-->
 
-    <!-- ============================================== spring config ============================================== -->
+    <!-- ============================================== spring ============================================== -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
@@ -155,12 +160,11 @@
       <version>${spring.version}</version>
     </dependency>
 
-    <!-- ============================================= junit5 config =============================================== -->
+    <!-- ============================================= junit5 =============================================== -->
     <!--单元测试-->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-<!--      <version>RELEASE</version>-->
       <version>5.6.0</version>
       <scope>compile</scope>
     </dependency>
@@ -195,7 +199,7 @@
     <!--<scope>compile</scope>-->
     <!--</dependency>-->
 
-    <!-- ============================================ mybatis config =============================================== -->
+    <!-- ============================================ mybatis =============================================== -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
