--- a/pom.xml
+++ b/pom.xml
@@ -252,6 +252,16 @@
 
   <build>
     <finalName>ssm</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
     <resources>
       <!--IDEA允许包中的配置文件复制到编译目录-->
       <resource>
