--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,16 @@
   </properties>
 
   <dependencies>
-    <!-- =============================================== aspectj ============================================ -->
+    <!-- =============================================== spring+aspectj ============================================ -->
     <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjweaver</artifactId>
-      <version>1.9.2</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>5.0.7.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>aopalliance</groupId>
+      <artifactId>aopalliance</artifactId>
+      <version>1.0</version>
     </dependency>
     <!-- =============================================== javax ============================================ -->
     <!--<dependency>-->
